kubes/server/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: nginx-deployment
  labels:
    app: nginx-deploy
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
